romove unnecessary files and folders

--- a/fraud_detection/Phishing_Email_ML.ipynb
+++ b/fraud_detection/Phishing_Email_ML.ipynb
@@ -5,7 +5,7 @@
    "id": "24b1f4ff",
    "metadata": {},
    "source": [
-    "# Phishing email detection using Random Forest"
+    "# Phishing email detection using Machine Learning"
    ]
   },
   {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "46270e8f",
+   "id": "c784a608",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c69f96c8",
+   "id": "37dc542a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a34342f",
+   "id": "1fccec61",
    "metadata": {},
    "source": [
     "## Random Forest"
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439355fe",
+   "id": "d6e6a461",
    "metadata": {},
    "source": [
     "## Naive Bayes"
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c7e5c0de",
+   "id": "136314d9",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e69bf85d",
+   "id": "513cb69a",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5ecbea10",
+   "id": "fe70cafb",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce35acbd",
+   "id": "9e618ce0",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f79ee9e3",
+   "id": "be5f1271",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "773159ec",
+   "id": "9999c5c9",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "69a48b81",
+   "id": "58fbd1b3",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1896c3a1",
+   "id": "3fa7a122",
    "metadata": {},
    "outputs": [],
    "source": []
